# lxdream

./: .gitignore  .hgignore  .travis.yml  CREDITS  ChangeLog  Info.plist.in  Makefile.am  Makefile.in  README.md  RELEASE_NOTES  STATUS  TODO  acinclude.m4  aclocal.m4  bundlelibs.pl  config.h.in  configure  configure.ac  configure.in  dmg.layout  dream.glade  dream.gladep  lxdream.desktop  lxdream.pod  lxdreamrc
android/: AndroidManifest.xml  build.xml
android/res/menu/: main.xml
android/res/values/: strings.xml
android/src/org/lxdream/: ConfigChooser.java  Dreamcast.java  LxdreamActivity.java  LxdreamView.java
debian/: changelog  control  copyright  cron.d.ex  files  lxdream.doc-base.EX  lxdream.substvars  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
m4/: android.m4  ccforbuild.m4
pixmaps/: lxdream.icns  lxdst.icns
po/: POTFILES.in  de.po  es.po  it.po  lxdream.pot  nl.po  pt_BR.po
src/: Makefile.am  Makefile.in  aica.c  aica.h  asic.c  asic.h  bios.c  bios.h  bootstrap.c  bootstrap.h  checkver.pl  clock.h  config.c  config.h  cpu.c  cpu.h  dckeysyms.h  dcload.c  display.c  display.h  dream.h  dreamcast.c  dreamcast.h  elf.h  eventq.c  eventq.h  gdbserver.c  gdlist.c  gdlist.h  gettext.h  gui.h  gui_android.c  gui_jni.c  gui_none.c  guiutil.c  hook.h  hotkeys.c  hotkeys.h  ioutil.c  ioutil.h  (+29 more)
src/aica/: aica.c  aica.h  armcore.c  armcore.h  armdasm.c  armdasm.h  armmem.c  audio.c  audio.h
src/cocoaui/: cocoa_cfg.m  cocoa_ctrl.c  cocoa_ctrl.m  cocoa_gd.c  cocoa_gd.m  cocoa_path.c  cocoa_path.m  cocoa_prefs.c  cocoa_prefs.m  cocoa_win.c  cocoa_win.m  cocoaui.c  cocoaui.h  cocoaui.m  paths_osx.m
src/drivers/: audio_alsa.c  audio_esd.c  audio_null.c  audio_osx.c  audio_osx.m  audio_pulse.c  audio_sdl.c  cd_linux.c  cd_mmc.c  cd_none.c  cd_osx.c  dummy.c  fragment.glsl  genkeymap.pl  gl_common.c  gl_common.h  gl_fbo.c  gl_glx.c  gl_sl.c  gl_slsrc.c  gl_vbo.c  input_lirc.c  input_lirc.h  io_glib.c  io_osx.m  joy_linux.c  joy_linux.h  mac_keymap.h  mac_keymap.txt  net_glib.c  net_osx.m  osx_iokit.c  osx_iokit.h  osx_iokit.m  serial_unix.c  vertex.glsl  video_egl.c  video_egl.h  video_gdk.c  video_gl.c  (+12 more)
src/drivers/cdrom/: README.LIBEDC  cd_cdi.c  cd_gdi.c  cd_linux.c  cd_mmc.c  cd_none.c  cd_nrg.c  cd_osx.c  cdimpl.h  cdrom.c  cdrom.h  defs.h  drive.c  drive.h  ecc.h  edc_ecc.c  edc_encoder.h  edc_l2sq.h  iso_impl.h  isofs.c  isofs.h  isomem.c  isoread.c  isoread.h  sector.c  sector.h
src/gdrom/: cdi.c  cdi.h  cdnone.c  ecc.h  edc_ecc.c  edc_scramble.h  gddriver.h  gdi.c  gdimage.c  gdrom.c  gdrom.h  ide.c  ide.h  linux.c  mmc.c  nrg.c  packet.h
src/gtkui/: ctrl_dlg.c  debug_win.c  dump_win.c  gdrom_menu.c  gtk_cfg.c  gtk_ctrl.c  gtk_debug.c  gtk_dump.c  gtk_gd.c  gtk_hotkeys.c  gtk_mmio.c  gtk_path.c  gtk_win.c  gtkcb.c  gtkui.c  gtkui.h  main_win.c  mmio_win.c  path_dlg.c
src/gui/: callbacks.c  callbacks.h  ctrl_dlg.c  debug_win.c  debugcb.c  debugcb.h  debugif.c  dump_win.c  gdrom_menu.c  gtkcb.c  gtkui.c  gtkui.h  gui.c  gui.h  gui_mmr.c  interface.c  interface.h  main_win.c  mmio_win.c  path_dlg.c
src/maple/: controller.c  controller.h  kbd.c  lightgun.c  maple.c  maple.h  mouse.c  vmu.c
src/pvr2/: fragment.glsl  gl_sl.c  gl_slsrc.c  glrender.c  glutil.c  glutil.h  pvr2.c  pvr2.h  pvr2mem.c  pvr2mmio.h  rendbkg.c  rendcore.c  render.c  rendsave.c  rendsort.c  scene.c  scene.h  shaders.glsl  ta.c  tacore.c  texcache.c  tileiter.h  untile.c  vertex.glsl  yuv.c
src/sh4/: Makefile  Makefile.am  Makefile.in  cache.c  dmac.c  dmac.h  ia32abi.h  ia32asm.s  ia32mac.h  ia64abi.h  ia64asm.s  intc.c  intc.h  mem.c  mem.h  mmio.h  mmu.c  mmu.h  mmux86.c  pmm.c  scif.c  sh4.c  sh4.def  sh4.h  sh4core.c  sh4core.h  sh4core.in  sh4dasm.c  sh4dasm.h  sh4dasm.in  sh4mem.c  sh4mmio.c  sh4mmio.h  sh4stat.c  sh4stat.h  sh4stat.in  sh4trans.c  sh4trans.h  sh4x86.c  sh4x86.in  (+7 more)
src/test/: testisoread.c  testlxpaths.c  testsh4x86.c  testsh4xir.c  testxir.c  testxlt.c
src/tools/: Makefile.am  Makefile.in  actparse.c  gendec.c  gendec.h  genglsl.c  genmach.c  genmach.h  insparse.c  mdparse.c
src/vmu/: vmulist.c  vmulist.h  vmuvol.c  vmuvol.h
src/x86dasm/: README  bfd.h  config.h  dis-asm.h  dis-buf.c  dis-init.c  i386-dis.c  sysdep.h  x86dasm.c  x86dasm.h
src/xlat/: dce.c  livevar.c  regalloc.c  regalloc.h  target.c  xir.c  xir.h  xiropt.h  xirsup.c  xlat.h  xlatdasm.c  xlatdasm.h  xltcache.c  xltcache.h
src/xlat/disasm/: arm-dis.c  bfd.h  dis-asm.h  dis-buf.c  dis-init.c  floatformat.c  i386-dis.c  safe-ctype.c  sysdep.h
src/xlat/x86/: amd64abi.h  ia32abi.h  x86gen.c  x86op.h  x86target.c  x86target.h
test/: Makefile  Makefile.in  README  aica.x  asic.c  asic.h  bin2c.c  dc.x  dma.h  dmac.c  ide.c  ide.h  interrupt.s  lib.c  lib.h  lxdream.rc  math.s  pvr.c  pvr.h  randmath.c  rendload.c  testaica.c  testdata.c  testdata.h  testdisp.c  testide.c  testmath.c  testmmu.c  testregs.c  testrend.c  testsort.data  testspu.c  testta-fail.data  testta.c  testta.data  testta2.data  testta3.data  testta4.data  testta5.data  testta6.data  (+3 more)
test/lib/: crt0.s  newlib-1.8.2-dc.patch
test/lib-arm/: crt0.s  newlib-1.8.2-aica.patch
test/sh4/: README  add.s  addc.s  addv.s  and.s  andi.s  bf.s  bsr.s  bt.s  cmp.s  cmpstr.s  div0.s  div1.s  excslot.s  float.s  fmov.s  fsrra.s  ftrc.s  inc.s  ldc.s  ldcsr.s  mac.s  mmummio.c  rot.s  shl.s  shld.s  sub.s  subc.s  subv.s  tas.s  testmmu.c  testsh4.c  testutlb.s  tlb.s  trapa.s  undef.s  utlb.c  utlb.h  vmexit.s  xtrct.s
